--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -29,7 +29,7 @@
     permalink="{{ .Permalink }}" 
     vimeo="{{ .Params.vimeo }}"
     youtube="{{ .Params.youtube }}"
-    free="{{ .Params.free }}"
+    free="free"
     next="{{with .PrevInSection}}{{.Permalink}}{{end}}" 
     prev="{{with .NextInSection}}{{.Permalink}}{{end}}">
   </global-data>
